test/expressions/new-expr/has-arg-list.good
has-arg-list.chpl:19: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:20: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:27: In initializer:
has-arg-list.chpl:27: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:27: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:33: In function 'main':
has-arg-list.chpl:35: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:36: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:37: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:38: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:41: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:42: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:43: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:44: error: type in 'new' expression is missing its argument list
has-arg-list.chpl:47: error: type in 'new' expression is missing its argument list
